refactoring header bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <ion-app>
+  <app-shared-user-header></app-shared-user-header>
+  <ion-content [fullscreen]="false" color=medium>
     <ion-router-outlet></ion-router-outlet>
+  </ion-content>
 </ion-app>
