--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -33,7 +33,7 @@
     </ion-row>
   </ion-grid>
   <ion-fab vertical="top" horizontal="end" slot="fixed">
-    <ion-fab-button size="small" color="light" (click)="test()">
+    <ion-fab-button size="small" color="light" (click)="showNotice()">
       <ion-icon name="information-circle-outline"></ion-icon>
     </ion-fab-button>
   </ion-fab>
