--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,19 +1,27 @@
-<app-shared-user-header [pageTitle]="page.pageTitle"></app-shared-user-header>
-<ion-content [fullscreen]="false" color=medium>
-    <!-- <app-menu [page]="page"></app-menu> -->
-    <ion-card class="menu-item-card" [button]="(menuItem.type === 'button')" *ngFor="let menuItem of page.menuItems" routerDirection="root" [routerLink]="(menuItem.type ==='button') ? menuItem.path : ''">
-        <ion-card-header>
-            <ion-card-title>
-                <ion-icon *ngIf="menuItem.options?.qualityOnly" name="shield-half-outline"></ion-icon>
-                {{menuItem.title}}
-            </ion-card-title>
-        </ion-card-header>
-        <ion-card-content *ngIf="menuItem.options?.input">
-            <ion-item shape=round>
-                <ion-label>Id Moulage</ion-label>
-                <ion-input #inputIdMolding type="text" placeholder=""></ion-input>
-                <ion-note slot=helper>Entrer un numéro d'ID ou scanner le code barre de la feuille de moulage</ion-note>
-            </ion-item>
-        </ion-card-content>
+<!-- <app-menu [page]="page"></app-menu> -->
+<ion-content [fullscreen]="true" color=medium>
+  <div class="menu">
+    <ion-card *ngFor="let menuItem of menuItems" class="menu-item-card" [button]="(menuItem.type === 'button')"
+      routerDirection="root" [routerLink]="(menuItem.type ==='button') ? menuItem.path : ''">
+      <ion-card-header>
+        <ion-card-title>
+          <!-- <ion-icon *ngIf="menuItem.options?.qualityOnly" name="shield-half-outline"></ion-icon> -->
+          {{menuItem.title}}
+        </ion-card-title>
+      </ion-card-header>
+      <!-- <ion-card-content *ngIf="menuItem.options?.input">
+      <ion-item shape=round>
+        <ion-label>Id Moulage</ion-label>
+        <ion-input #inputIdMolding type="text" placeholder=""></ion-input>
+        <ion-note slot=helper>Entrer un numéro d'ID ou scanner le code barre de la feuille de moulage</ion-note>
+      </ion-item>
+    </ion-card-content> -->
     </ion-card>
+  </div>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button size="small" color="light" (click)="showNotice()">
+      <ion-icon name="information-circle-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  <!-- <ion-router-outlet></ion-router-outlet> -->
 </ion-content>
