--- a/src/app/pages/molding/molding.page.html
+++ b/src/app/pages/molding/molding.page.html
@@ -1,5 +1,4 @@
-<app-shared-user-header [pageTitle]="page.pageTitle"></app-shared-user-header>
-<ion-content [fullscreen]="false" color=medium>
+<ion-content [fullscreen]="true" color=medium>
   <app-molding-menu></app-molding-menu>
   <ion-router-outlet id="molding-content"></ion-router-outlet>
 </ion-content>
