rephrasing password => mot de passe

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -20,7 +20,7 @@
           </ion-note>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">Password
+          <ion-label position="floating">Mot de passe
           </ion-label>
           <ion-input #password formControlName="password" type="password" value=""></ion-input>
         </ion-item>
@@ -44,9 +44,5 @@
     <div class="title" slot=end class="ion-padding">
       Version : {{version}}
     </div>
-
-
-
-
   </ion-toolbar>
 </ion-footer>
