--- a/src/app/tooling/components/tool-requests/tool-requests.page.scss
+++ b/src/app/tooling/components/tool-requests/tool-requests.page.scss
@@ -19,10 +19,15 @@
     border-color: currentColor;
 }
 
-.filter-item {
-    width: auto;
-}
+
 
 .filters {
     display: flex;
+    // flex-grow: 1;
+    max-width: 100%;
+    flex-wrap: wrap;
+    width: max-content;
+    .filter-item {
+      width: auto;
+  }
 }
