--- a/src/app/tooling/components/tool-requests/tool-requests.page.html
+++ b/src/app/tooling/components/tool-requests/tool-requests.page.html
@@ -25,7 +25,7 @@
             </ion-select>
           </ion-item>
         </div>
-        <ion-button slot=end (click)="resetFilters()">
+        <ion-button slot=end (click)="resetFiltersClick()">
           Supprimer les filtres
         </ion-button>
       </ion-toolbar>
