--- a/src/app/molding/components/create-molding/create-molding-toolbar/create-molding-toolbar.component.html
+++ b/src/app/molding/components/create-molding/create-molding-toolbar/create-molding-toolbar.component.html
@@ -1,10 +1,10 @@
 <ion-toolbar color=light>
   <ion-buttons slot="end" collapse="true">
-    <ion-button slot=end (click)="saveMoldingClick()" fill="clear">
+    <ion-button color=primary slot=end (click)="saveMoldingClick()" fill="outline" [disabled]="!isMoldingComplete">
       <ion-icon slot="start" name="save-outline"></ion-icon>
       SAUVEGARDER
     </ion-button>
-    <ion-button slot=end (click)="saveMoldingClick(true)" fill="solid" color=primary>
+    <ion-button color=primary slot=end (click)="saveMoldingClick(true)" fill="solid" [disabled]="!isMoldingComplete">
       <ion-icon slot="start" name="print-outline"></ion-icon>
       IMPRIMER
     </ion-button>
