--- a/src/app/molding/components/create-molding/molding-info-toolbar/molding-info-toolbar.component.html
+++ b/src/app/molding/components/create-molding/molding-info-toolbar/molding-info-toolbar.component.html
@@ -7,7 +7,7 @@
 
   <div class="col" slot=end>
     <ion-text class="strong">Début moulage : {{molding?.moldingDay | date: "dd/MM/yyyy"}}</ion-text>
-    <ion-text class="strong" *ngIf="molding?.userCreat">Mouleur : {{molding?.userCreat.nom}}
+    <ion-text class="strong" *ngIf="molding?.userCreat">Réalisé par : {{molding?.userCreat.nom}}
       {{molding?.userCreat.prenom}}</ion-text>
   </div>
   <ion-text *ngIf=molding?.aDraperAv slot=end class="strong">A draper avant le : {{molding?.aDraperAv | date:
