--- a/src/app/core/admin/pages/admin-home/admin.page.html
+++ b/src/app/core/admin/pages/admin-home/admin.page.html
@@ -1,7 +1,7 @@
 <app-shared-admin-header></app-shared-admin-header>
 
 <ion-content [fullscreen]="false" color=medium>
-  <ion-menu side="start" type="push" contentId="admin-content" open="true" #menuAdmin>
+  <ion-menu menuId="admin-menu" side="start" type="push" contentId="admin-content" open="true" #menuAdmin>
     <ion-header>
       <ion-toolbar color="danger">
         <ion-title>Menu de l'admnistration</ion-title>
