--- a/src/app/shared/components/shared-user-header/shared-user-header.component.html
+++ b/src/app/shared/components/shared-user-header/shared-user-header.component.html
@@ -4,7 +4,7 @@
     <!-- left side -->
     <!--  -->
     <ion-buttons slot="start">
-      <ion-menu-button autoHide=false color="light" *ngIf=!hideMenuIcon></ion-menu-button>
+      <ion-menu-button autoHide="false" color="light" *ngIf=!hideMenuIcon menu="main-menu"></ion-menu-button>
       <ion-img class="ion-hide-sm-down logo" src="assets/images/logoDaherFondBleu.png" (click)="navigate('home')">
       </ion-img>
     </ion-buttons>
