--- a/src/app/core/admin/components/admin-molding-list/admin-molding-list.component.html
+++ b/src/app/core/admin/components/admin-molding-list/admin-molding-list.component.html
@@ -1,64 +1,63 @@
-<ion-card>
-  <ion-card-header>
-    <ion-toolbar class=ion-no-margin>
-      <ion-card-title>Liste des moulages</ion-card-title>
+<ion-content [fullscreen]="true" class="molding-list-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Liste des moulages</ion-title>
       <ion-spinner slot=end *ngIf="moldingListLoading" name="circles"></ion-spinner>
-      <!-- <ion-button size=small slot=end (click)="getMoldings()">
-        <ion-icon size=small slot="icon-only" name="refresh"></ion-icon>
-      </ion-button> -->
-
     </ion-toolbar>
-  </ion-card-header>
-  <ion-card-content>
-    <!-- <div class="error" *ngIf="moldingsError && !moldingListLoading">
-      <ion-label>Pas de moulage à afficher</ion-label>
-    </div> -->
-    <div class="moldings-table" *ngIf="dataSource.data.length > 0">
-      <ion-input type="text" placeholder="Numéro d'OT" (ionInput)="applyFilter($event)"></ion-input>
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" fixedLayout=true>
-        <!-- Id Column -->
-        <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let element">
-            <ion-icon name="ellipse" [color]="(element.status) ? 'danger' : 'success'"></ion-icon>
-          </td>
-        </ng-container>
-        <!-- Id Column -->
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef> ID </th>
-          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-        </ng-container>
-        <!-- Moulé le Column -->
-        <ng-container matColumnDef="moldingDay">
-          <th mat-header-cell *matHeaderCellDef> Date du moulage </th>
-          <td mat-cell *matCellDef="let element"> {{element.moldingDay | date: "dd/MM/yyyy"}} </td>
-        </ng-container>
-        <!-- Créé par Column -->
-        <ng-container matColumnDef="createdBy">
-          <th mat-header-cell *matHeaderCellDef> Créé par </th>
-          <td mat-cell *matCellDef="let element"> {{element.userCreat.username}} </td>
-        </ng-container>
-        <!-- Outillage Column -->
-        <ng-container matColumnDef="outillage">
-          <th mat-header-cell *matHeaderCellDef> Outillage </th>
-          <td mat-cell *matCellDef="let element"> {{element.OT.sapToolNumber}} -
-            {{element.OT.designation}}</td>
-        </ng-container>
+  </ion-header>
+  <ion-menu contentId="filters-content" menuId="filters-menu">
+    <ion-header>
+      <ion-toolbar color=light>
+        <ion-title>Recherche avancée</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <app-moldings-filters></app-moldings-filters>
+    </ion-content>
+  </ion-menu>
+  <ion-content [fullscreen]="true" id="filters-content">
+    <ion-grid style="width:100%;">
+      <ion-row color=medium class="ion-padding">
+        <ion-col size=1>
+          <ion-menu-button menu="filters-menu" autoHide="false">
+            <ion-icon name="filter-outline"></ion-icon>
+          </ion-menu-button>
+        </ion-col>
+        <ion-col>Date de création</ion-col>
+        <ion-col>Créé par</ion-col>
+        <ion-col>Outillage de moulage</ion-col>
+      </ion-row>
+      <ion-row *ngFor="let molding of filteredMoldings; let index = index;" (click)="toggleOptions(slidingItem)">
+        <ion-item-sliding #slidingItem [disabled]="true">
+          <ion-item button class="ion-text-left" lines="full">
+            <ion-col size=1>
+              <ion-chip [color]="(molding.isActive) ? 'success' : 'danger'" mode="ios" outline="true">
+                <ion-label>{{molding.id}}</ion-label>
+              </ion-chip>
+            </ion-col>
+            <ion-col>
+              <ion-text> {{molding.moldingDay | DateHeure}} </ion-text>
+            </ion-col>
 
-        <!-- commands Column -->
-        <ng-container matColumnDef="commands">
-          <th mat-header-cell *matHeaderCellDef> </th>
-          <td mat-cell *matCellDef="let element">
-            <ion-button size=small expand="block" fill="solid" shape="round"
-              [routerLink]="'/molding/create-molding/'+element.id">
-              Editer
-            </ion-button>
-          </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedMoldingColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedMoldingColumns;"></tr>
-      </table>
-    </div>
-
-  </ion-card-content>
-</ion-card>
+            <ion-col>
+              <ion-text> {{molding.userCreat.username}} </ion-text>
+            </ion-col>
+            <ion-col>
+              <ion-text> {{molding.OT.sapToolNumber}} - {{molding.OT.designation}}</ion-text>
+            </ion-col>
+          </ion-item>
+          <ion-item-options>
+            <ion-item-option [routerLink]="'/molding/create-molding/'+molding.id">OUVRIR</ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-row>
+    </ion-grid>
+  </ion-content>
+  <ion-footer>
+    <ion-toolbar>
+      <ion-button (click)="nextPage()" expand="block" fill="clear" shape="round">
+        Charger plus
+      </ion-button>
+    </ion-toolbar>
+  </ion-footer>
+</ion-content>
