--- a/src/app/core/admin/components/shared-admin-header/shared-admin-header.component.html
+++ b/src/app/core/admin/components/shared-admin-header/shared-admin-header.component.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="false">
   <ion-toolbar color=primary>
     <ion-buttons slot="start">
-      <ion-menu-button color="light"></ion-menu-button>
+      <ion-menu-button color="light" menu="admin-menu" autoHide="false"></ion-menu-button>
       <ion-img class="ion-hide-sm-down logo" src="assets/images/logoDaherFondBleu.png" (click)="navigateHome()">
       </ion-img>
     </ion-buttons>
