--- a/src/app/molding/components/create-molding/molding-info-toolbar/molding-info-toolbar.component.html
+++ b/src/app/molding/components/create-molding/molding-info-toolbar/molding-info-toolbar.component.html
@@ -6,14 +6,12 @@
   </ion-button>
 
   <div class="col" slot=end>
-    <ion-text class="strong">Début moulage : {{molding?.moldingDay | date: "dd/MM/yyyy"}}</ion-text>
+    <ion-text class="strong">Fait le : {{molding?.moldingDay | DateHeure}}</ion-text>
     <ion-text class="strong" *ngIf="molding?.userCreat">Réalisé par : {{molding?.userCreat.nom}}
       {{molding?.userCreat.prenom}}</ion-text>
   </div>
-  <ion-text *ngIf=molding?.aDraperAv slot=end class="strong">A draper avant le : {{molding?.aDraperAv | date:
-    "dd/MM/yyyy
-    à HH:mm"}}
+  <ion-text *ngIf=molding?.aDraperAv slot=end class="strong">A draper avant le : {{molding?.aDraperAv | DateHeure}}
   </ion-text>
-  <ion-text *ngIf=molding?.aCuireAv slot=end class="strong">A cuire avant le : {{molding?.aCuireAv | date: "dd/MM/yyyy à
-    HH:mm"}}</ion-text>
+  <ion-text *ngIf=molding?.aCuireAv slot=end class="strong">A cuire avant le : {{molding?.aCuireAv | DateHeure}}
+  </ion-text>
 </ion-toolbar>
