--- a/src/app/shared/components/user-popover/user-popover.component.html
+++ b/src/app/shared/components/user-popover/user-popover.component.html
@@ -1,7 +1,7 @@
 <!-- <ion-popover>
   <ng-template #name> -->
 <ion-list>
-  <ion-item button id="trigger-button" (click)="isUserOpen=true">
+  <ion-item button id="trigger-button" (click)="editProfilClick()">
     <ion-label>Profil</ion-label>
   </ion-item>
   <ion-item>
