--- a/src/app/tooling/components/tool-request-menu/tool-request-menu.component.html
+++ b/src/app/tooling/components/tool-request-menu/tool-request-menu.component.html
@@ -1,4 +1,4 @@
-<ion-menu open=true #menuTool side="start" type="push" contentId="tooling-content">
+<ion-menu menuId="main-menu" open=true #menuTool side="start" type="push" contentId="tooling-content">
   <ion-header>
     <ion-toolbar color="succes">
       <ion-title>
