--- a/src/app/core/admin/components/admin-user-table/admin-user-table.component.html
+++ b/src/app/core/admin/components/admin-user-table/admin-user-table.component.html
@@ -54,5 +54,5 @@
   </tr>
 </table>
 
-<app-user-sheet [user]="selectedUser" [userState]="isUserSelected" (stateChangeEv)="isUserSelected=$event">
+<app-user-sheet [user]="selectedUser" (stateChangeEv)="isUserSelected=$event">
 </app-user-sheet>
