molding securisations _sauvegarde ==> un seul bouton _titre de la page dynamique pour afficher le numéro du moulage en cas d'édition => Création d'un service dédié

--- a/src/app/molding/pages/molding.page.html
+++ b/src/app/molding/pages/molding.page.html
@@ -1,4 +1,4 @@
-<app-shared-user-header title="MOULAGE"></app-shared-user-header>
+<app-shared-user-header></app-shared-user-header>
 <ion-content color=medium>
   <app-molding-menu></app-molding-menu>
   <ion-router-outlet id="molding-content"></ion-router-outlet>
