--- a/src/app/molding/components/create-molding/create-molding-toolbar/create-molding-toolbar.component.html
+++ b/src/app/molding/components/create-molding/create-molding-toolbar/create-molding-toolbar.component.html
@@ -6,13 +6,13 @@
     </ion-button>
   </ion-buttons>
   <ion-buttons slot="end" collapse="true">
-    <ion-button color=primary slot=end (click)="saveMoldingClick()" fill="outline" [disabled]="!isMoldingComplete">
+    <ion-button color=primary slot=end (click)="saveMoldingClick(true)" fill="solid" [disabled]="!isMoldingComplete">
       <ion-icon slot="start" name="save-outline"></ion-icon>
       SAUVEGARDER
     </ion-button>
-    <ion-button color=primary slot=end (click)="saveMoldingClick(true)" fill="solid" [disabled]="!isMoldingComplete">
+    <!-- <ion-button color=primary slot=end (click)="saveMoldingClick(true)" fill="solid" [disabled]="!isMoldingComplete">
       <ion-icon slot="start" name="print-outline"></ion-icon>
-      IMPRIMER
-    </ion-button>
+      TERMINER
+    </ion-button> -->
   </ion-buttons>
 </ion-toolbar>
